# ros_package

./: README.md
nasa_r2/nasa_r2_common/nasa_r2_common/: package.xml
nasa_r2/nasa_r2_common/r2_control/: CMakeLists.txt  package.xml
nasa_r2/nasa_r2_common/r2_control/nodes/: r2_fullbody_ready_pose.py  r2_ready_pose.py
nasa_r2/nasa_r2_common/r2_description/: CMakeLists.txt  package.xml
nasa_r2/nasa_r2_common/r2_description/launch/: r2_display.launch  r2_display.rviz  r2_echo.launch
nasa_r2/nasa_r2_common/r2_description/meshes/: Backpack.dae  Body.dae  Body_Cover.dae  Finger_Dist.dae  Finger_Mid.dae  Finger_Proximal.dae  Head.dae  Left_Elbow.dae  Left_Forearm.dae  Left_Palm.dae  Left_Shoulder_Lower.dae  Left_Shoulder_Upper.dae  Left_Thumb_Carp.dae  Left_Thumb_MtCar.dae  Left_Upper_Arm.dae  Neck_Lower.dae  Neck_Upper.dae  Right_Elbow.dae  Right_Forearm.dae  Right_Palm.dae  Right_Shoulder_Lower.dae  Right_Shoulder_Upper.dae  Right_Thumb_MtCar.dae  Right_Upper_Arm.dae  Stanchion.dae  Stanchion_Baseplate.dae  Thumb_Dist.dae  Thumb_Proximal.dae
nasa_r2/nasa_r2_common/r2_description/meshes/r2_legs/: r2cl_ext_bone1.dae  r2cl_ext_bone2.dae  r2cl_ext_bone3.dae  r2cl_ext_pelvis.dae  r2cl_foot.dae  r2cl_foot_jaw1.dae  r2cl_foot_jaw2.dae
nasa_r2/nasa_r2_common/r2_description/robots/: r2.urdf.xacro  r2_fullbody.urdf.xacro  r2_fullbody_no_world.urdf.xacro  r2_legs.urdf.xacro
nasa_r2/nasa_r2_common/r2_description/urdf/: r2.base.xacro  r2.body.xacro  r2.common.xacro  r2.head.xacro  r2.left_arm.xacro  r2.left_hand.xacro  r2.right_arm.xacro  r2.right_hand.xacro
nasa_r2/nasa_r2_common/r2_description/urdf/r2_legs/: r2_legs.left_foot.xacro  r2_legs.left_leg.xacro  r2_legs.pelvis.xacro  r2_legs.right_foot.xacro  r2_legs.right_leg.xacro  r2_legs.stand.xacro
nasa_r2/nasa_r2_common/r2_msgs/: .gitignore  CMakeLists.txt  package.xml
nasa_r2/nasa_r2_simulator/gazebo_gripper/: CMakeLists.txt  package.xml
nasa_r2/nasa_r2_simulator/gazebo_gripper/include/gazebo_gripper/: .GazeboGripper.h.swp  GazeboGripper.h
nasa_r2/nasa_r2_simulator/gazebo_gripper/src/gazebo_gripper/: GazeboGripper.cpp
nasa_r2/nasa_r2_simulator/gazebo_interface/: CMakeLists.txt  package.xml
nasa_r2/nasa_r2_simulator/gazebo_interface/include/gazebo_interface/: .GazeboInterface.h.swp  .RobotController.h.swp  GazeboInterface.h  JointController.h  RobotController.h
nasa_r2/nasa_r2_simulator/gazebo_interface/src/: joint PID tuning.txt
nasa_r2/nasa_r2_simulator/gazebo_interface/src/gazebo_interface/: GazeboInterface.cpp  JointController.cpp  RobotController.cpp
nasa_r2/nasa_r2_simulator/gazebo_taskboard/: CMakeLists.txt  package.xml
nasa_r2/nasa_r2_simulator/gazebo_taskboard/Media/models/: lowpoly_numpad_led.dae  numpad_led.dae
nasa_r2/nasa_r2_simulator/gazebo_taskboard/include/gazebo_taskboard/: .GazeboTaskboard.h.swp  GazeboTaskboard.h
nasa_r2/nasa_r2_simulator/gazebo_taskboard/msg/: TaskboardPanelA.msg
nasa_r2/nasa_r2_simulator/gazebo_taskboard/src/gazebo_taskboard/: GazeboTaskboard.cpp
nasa_r2/nasa_r2_simulator/gazebo_taskboard/srv/: ManipulateNumPad.srv  ManipulatePowerCover.srv  ManipulateRockerSwitch.srv  ManipulateSafeToggle.srv
nasa_r2/nasa_r2_simulator/gazebo_taskboard/test/: helper.py  test_numpad.py  test_numpad.test  test_power_cover.py  test_power_cover.test  test_power_switch.py  test_power_switch.test  test_rocker_switch_a01.py  test_rocker_switch_a01.test  test_toggle_a03_a05.py  test_toggle_a03_a05.test  test_toggle_a04.py  test_toggle_a04.test
nasa_r2/nasa_r2_simulator/nasa_r2_simulator/: package.xml
nasa_r2/nasa_r2_simulator/r2_gazebo/: .gitignore  CMakeLists.txt  package.xml  setup.sh
nasa_r2/nasa_r2_simulator/r2_gazebo/Media/materials/scripts/: Gazebo.material
nasa_r2/nasa_r2_simulator/r2_gazebo/Media/models/ISS/: Express_Rack_Knobs.2.C.dae  Express_Rack_Knobs.dae  USLabCombined.dae  USLab_Junk.C.dae  USLab_MSG_Detail.dae  USLab_MSG_Details.C.dae  USLab_MSSAV_Details.C.dae  USLab_Wires.C.dae  USLab_Wires.dae  US_Lab_AftEnd.C.dae  US_Lab_FwdEnd.C.dae  US_Lab_ISS_half.dae  US_Lab_ISS_quarter.dae  US_Lab_MainFrame.dae  US_Lab_Racks.C.dae  US_Lab_Racks.dae  hatch_MLI_cover.dae  hatch_MLI_cover1.dae  usLab_lightBars_standalone.dae
nasa_r2/nasa_r2_simulator/r2_gazebo/Media/models/taskboard/: cable_link.dae  cable_link1.dae  cable_link2.dae  cable_link3.dae  cable_link4.dae  cable_link5.dae  tskbd_lower_assembly_labels.dae  tskbd_lower_assembly_robonaut.dae  tskbd_lower_assembly_robonaut2.stl  (+43 more)
nasa_r2/nasa_r2_simulator/r2_gazebo/config/: R2Kinematics.json  legs_urdf.rviz  mass.txt  mass_conversion.py  mass_params.xls  transmission_params.xls  urdf.rviz
nasa_r2/nasa_r2_simulator/r2_gazebo/config/controllers/: r2_fullbody_generic_traj_control.yaml  r2_generic_traj_control.yaml
nasa_r2/nasa_r2_simulator/r2_gazebo/gazebo/: r2_ISS.world  r2_ISS_simple.world  r2_empty.world  r2_empty_no_gravity.world
nasa_r2/nasa_r2_simulator/r2_gazebo/launch/: display_r2.launch  display_r2c_legs.launch  main.launch  octomap.launch  r2_fullbody_gazebo.launch  r2_gazebo.launch  spawn_r2.launch  spawn_r2_fullbody.launch  taskboard.launch
nasa_r2/nasa_r2_simulator/r2_gazebo/robots/: r2.display.urdf.xacro  r2.sim.urdf  r2.sim.urdf.xacro  r2_fullbody.sim.urdf  r2_fullbody.sim.urdf.xacro
nasa_r2/nasa_r2_simulator/r2_gazebo/urdf/: r2.gazebo.xacro  r2.urdf  r2_legs.gazebo.xacro  taskboard.B01.xacro  taskboard.B05.xacro  taskboard.lower.xacro  taskboard.slot1.xacro  taskboard.slot2.xacro  taskboard.slot3.xacro  taskboard.slot4.xacro  taskboard.urdf.xacro
nasa_r2/nasa_r2_simulator/r2_gazebo/urdf/gazebo_plugins/: gazebo_interface.xacro  leg_grippers.xacro  p3d_base_controller.xacro  r2.gazebo.controller.xacro  r2.transmissions.xacro  r2_legs.transmissions.xacro  taskboard.panel_a.controller.xacro
nasa_r2/nasa_r2_simulator/r2_gazebo/urdf/sensors/: asus.gazebo.xacro  camboard_nano.gazebo.xacro  camera.gazebo.xacro  hokuyo_lx30_laser.gazebo.xacro  r2.gazebo.sensors.xacro  r2_legs.gazebo.sensors.xacro
smartcar/buptsmartcar_cpp/: CMakeLists.txt  package.xml
smartcar/buptsmartcar_cpp/src/: findLine.cpp
(+141 files in other folders)
