<?xml version="1.0"?>
<package>
  <name>nasa_r2_common</name>
  <version>1.0.0</version>
  <description>Core components of ROS/Robonaut2</description>

  <maintainer email="stephen.hart@nasa.gov">Stephen Hart</maintainer>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <run_depend>r2_control</run_depend>
  <run_depend>r2_description</run_depend>
  <run_depend>r2_moveit_config</run_depend>
  <run_depend>r2_fullbody_moveit_config</run_depend>
  <run_depend>r2_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>

