<?xml version="1.0"?>
<package>
  <name>r2_control</name>
  <version>1.0.0</version>
  <description>Ready Poses for the Robonaut2</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <maintainer email="stephen.hart@nasa.gov">Stephen Hart</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/r2_control</url> -->
  <build_depend>actionlib</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
