<?xml version="1.0"?>
<package>
  <name>r2_description</name>
  <version>1.0.0</version>
  <description>URDF/Meshes/Models for Robonaut2</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <maintainer email="stephen.hart@nasa.gov">Stephen Hart</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/r2_description</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
