<?xml version="1.0"?>
<package>
  <name>r2_msgs</name>
  <version>1.0.0</version>
  <description>Messages for dealing with the Robonaut2/ISS Taskboard</description>
  <maintainer email="stephen.hart@nasa.gov">Stephen Hart</maintainer>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/r2_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
</package>

