<?xml version="1.0"?>
<package>
  <name>r2_gazebo</name>
  <version>0.5.5</version>
  <description>Configurations for Simulating Robonaut2 in Gazebo</description>
  <author>Stephen Hart</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <maintainer email="stephen.hart@nasa.gov">Stephen Hart</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/r2_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>r2_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>r2_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo gazebo_media_path="${prefix}"/>
  </export>
</package>
